2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Need to set BUILD_HOST now that we don't source
	config.sh anymore.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Add a using clause, seems like older gmcs doesn't
	work without it.

2009-05-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Remove dead code and add a suggested work around
	  for runtime bug# 499702.

2009-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* CustomTypes.sql:
	* DBRevisionWorkView.cs: Include WorkHost in RevisionWorkView.

	* DBRevisionWorkView.generated.cs: Regenerated.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs:
	* DBHost.generated.cs: Add support for disabling hosts.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBMatchMode.cs:
	* DBDeleteCondition.cs:
	* DBLaneDeletionDirective.cs:
	* DBFileDeletionDirective.cs:
	* DBLaneDeletionDirectiveView.cs:
	* DBFileDeletionDirective.generated.cs:
	* DBLaneDeletionDirective.generated.cs:
	* DBLaneDeletionDirectiveView.generated.cs: Added.

	* Logger.cs:
	* DBFile.cs:
	* FileManager.cs: Add support for deletion directives.

2009-04-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs:
	* FileManager.cs: Match filenames using shell globs instead of
	  regexps.

2009-04-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Don't try to build work which unfulfilled
	  dependencies.

	* Updater.cs:
	* Builder.cs:
	* DBRevisionWork.cs:
	* DBLaneDependency.cs:
	* DBWorkFile.generated.cs:
	* DBLaneDependency.generated.cs: Add a dependency_host_id to
	  lane dependencies, to specify the host the lane must have
	  succeeded on.

2009-04-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Added BUILD_SCRIPT_DIR.

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBRevisionWork.cs: IsSuccess: Fix sql to behave like
	  IsSuccessWithFile.

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs:
	* DBLane.cs:
	* Builder.cs: